--- a/index.html
+++ b/index.html
@@ -9,8 +9,28 @@
 </head>
 
 <body>
-  <div id="app">
-    <h1>Hello!</h1>
+  <div>
+    <input placeholder="TODOを入力" />
+    <button>追加</button>
+  </div>
+  <div>
+    <p>未完了のTODO</p>
+    <ul>
+      <div>
+        <li>TODOです</li>
+        <button>完了</button>
+        <button>削除</button>
+      </div>
+    </ul>
+  </div>
+  <div>
+    <p>完了したTODO</p>
+    <ul>
+      <div>
+        <li>TODOです</li>
+        <button>戻す</button>
+      </div>
+    </ul>
   </div>
 
   <script src="src/index.js">
